LPS-61922 - Align and set correct search icon color

--- a/modules/frontend/frontend-theme/frontend-theme-classic-web/src/main/resources/META-INF/resources/classic/_diffs/css/_custom.scss
+++ b/modules/frontend/frontend-theme/frontend-theme-classic-web/src/main/resources/META-INF/resources/classic/_diffs/css/_custom.scss
@@ -98,7 +98,7 @@ body {
 
 		.search-input {
 			font-size: 16px;
-			padding-right: 40px;
+			padding-right: 32px;
 
 			@include sm {
 				height: auto;
@@ -111,18 +111,8 @@ body {
 			right: 0;
 			top: 0;
 
-			.search-button {
-				background-color: transparent;
-				border-width: 0;
-				margin-top: 0;
-
-				.lfr-btn-label {
-					display: none;
-				}
-
-				@include media-query(null, $screen-xs-max) {
-					padding: 0 14px;
-				}
+			a {
+				color: $complementary-color;
 			}
 		}
 	}
